Fix FCI cache for array_walk and user array compare functions. Bug #33286. (Patch from m.bretz@metropolis-ag.de)